<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="1">

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/unscramble_word"
        android:imeOptions="actionNext"
        android:inputType="text">

        <requestFocus/>
    </EditText>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_purple"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <TextView
            android:id="@+id/textViewInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/wordtoUnscram"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textViewScrambledWord"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="70dp" />

        <Button
            android:layout_width="180dp"
            android:layout_height="99dp"
            android:text="@string/submitButton"
            android:id="@+id/submitButton"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</GridLayout>
